--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,54 +7,54 @@ variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.pip-cache"
 
 stages:
-  #- lint          # ← will run first
-  #- test          # ← will run second
+  - lint          # ← will run first
+  - test          # ← will run second
   - build
   - deploy
   - pages
 
-# # ---------------------------- #
-# # 1. LINT
-# # ---------------------------- #
-# lint:
-#   stage: lint
-#   image: python:3.12-slim
-#   cache:
-#     key: ${CI_COMMIT_REF_SLUG}-pip
-#     paths:
-#       - .pip-cache
-#   before_script:
-#     - pip install --cache-dir $PIP_CACHE_DIR flake8
-#   script:
-#     - flake8 airflow/dags solarpanel_detection_service/src tests --max-line-length=120 || true
+# ---------------------------- #
+# 1. LINT
+# ---------------------------- #
+lint:
+  stage: lint
+  image: python:3.12-slim
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}-pip
+    paths:
+      - .pip-cache
+  before_script:
+    - pip install --cache-dir $PIP_CACHE_DIR flake8
+  script:
+    - flake8 airflow/dags solarpanel_detection_service/src tests --max-line-length=120 || true
 
-# ---------------------------- #
-# 2. TEST (unit)
-# ---------------------------- #
-# unit_test:
-#   stage: test
-#   image: python:${PYTHON_VERSION}-slim
-#   cache:
-#     key: ${CI_COMMIT_REF_SLUG}-pip
-#     paths:
-#       - .pip-cache
-#   before_script:
-#     # install your project + pytest
-#     #  – if you already have a requirements.txt or pyproject.toml, use that instead
-#     - pip install --cache-dir $PIP_CACHE_DIR -r requirements.txt || true
-#     - pip install --cache-dir $PIP_CACHE_DIR pytest pytest-cov
-#   script:
-#     # run only unit tests; add --cov=. if you want coverage, or drop it for speed
-#     - pytest tests/unit -q --cov=. --cov-report=term-missing
-#   artifacts:
-#     reports:
-#       junit: junit.xml           # GitLab will show test results in MR UI
-#     paths:
-#       - htmlcov                  # coverage html (optional)
-#   after_script:
-#     # produce JUnit XML for GitLab test report (optional but helpful)
-#     - pytest tests/unit -q --junitxml=junit.xml || true
-#   coverage: '/^TOTAL.*\s+(\d+\%)$/'   # parses “TOTAL …  85%” from pytest‑cov output
+---------------------------- #
+2. TEST (unit)
+---------------------------- #
+unit_test:
+  stage: test
+  image: python:${PYTHON_VERSION}-slim
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}-pip
+    paths:
+      - .pip-cache
+  before_script:
+    # install your project + pytest
+    #  – if you already have a requirements.txt or pyproject.toml, use that instead
+    - pip install --cache-dir $PIP_CACHE_DIR -r requirements.txt || true
+    - pip install --cache-dir $PIP_CACHE_DIR pytest pytest-cov
+  script:
+    # run only unit tests; add --cov=. if you want coverage, or drop it for speed
+    - pytest tests/unit -q --cov=. --cov-report=term-missing
+  artifacts:
+    reports:
+      junit: junit.xml           # GitLab will show test results in MR UI
+    paths:
+      - htmlcov                  # coverage html (optional)
+  after_script:
+    # produce JUnit XML for GitLab test report (optional but helpful)
+    - pytest tests/unit -q --junitxml=junit.xml || true
+  coverage: '/^TOTAL.*\s+(\d+\%)$/'   # parses “TOTAL …  85%” from pytest‑cov output
 
 # Build Docker image
 build:
@@ -99,7 +99,7 @@ deploy_to_ec2:
     - ssh -i $EC2_DEPLOY_KEY -o StrictHostKeyChecking=no ubuntu@3.88.102.215 "
       cd /home/ubuntu/02 &&
       git fetch origin &&
-      git checkout Navid/Cleaning-up-for-aws &&
-      git reset --hard origin/Navid/Cleaning-up-for-aws &&
+      git checkout main &&
+      git reset --hard origin/main &&
       sudo docker-compose down &&
       sudo docker-compose up -d --build "
