--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,9 +28,9 @@ lint:
   script:
     - flake8 airflow/dags solarpanel_detection_service/src tests --max-line-length=120 || true
 
----------------------------- #
-2. TEST (unit)
----------------------------- #
+# ---------------------------- #
+# 2. TEST (unit)
+# ---------------------------- #
 unit_test:
   stage: test
   image: python:${PYTHON_VERSION}-slim
