Add DEV_MODE configuration for development and deployment modes in environment settings and update README

--- a/.env
+++ b/.env
@@ -71,3 +71,5 @@ EXTERNAL_MINIO_UI=http://localhost:9001
 EXTERNAL_PORTAINER_UI=https://localhost:9443
 EXTERNAL_FASTAPI_GATEWAY=http://localhost:8001
 EXTERNAL_DETECTION_API=http://localhost:8002 
+
+DEV_MODE=True
